--- a/README.md.template
+++ b/README.md.template
@@ -1,9 +1,15 @@
 Layout-Breaker
 =
 
+Oneliner
+==
+'''
+javascript:@@JS_HERE@@
+'''
+
 Usage
 ==
-- Drag & drop this link to the [layout breaker](javascript:@@JS_HERE@@) to you bookmark bar
+- Create new bookmark, copy the above oneliner as the boormark link
 - Navigate to the page which layout you want to test
 - Click the boormarklet
 - Profit!!!!11!one!
