enh: introduced jibberishifier, more docs

--- a/README.md.template
+++ b/README.md.template
@@ -1,21 +1,50 @@
-Layout-Breaker
+PageBreakers
 =
+Bookmarklets to QA page design
 
-Oneliner
+Layout-Breaker
 ==
-`javascript:@@JS_HERE@@`
+`javascript:@@LAYOUT_BREAKER_HERE@@`
 
-Goal
+Jibberishifier
 ==
-To see how page layout reacts to varying sizes in text content in order to assess robustness of markup & styles.
+`javascript:@@JIBBERISHIFIER_HERE@@`
 
 Usage
 ==
-- Create new bookmark, copy the above oneliner as the boormark link
-- Navigate to the page which layout you want to test
+
+Both
+===
+- Create new bookmark, copy&paste above oneliner as the boormark link
+- Navigate to victim page
 - Click the boormarklet
 - Profit!!!!11!one!
+
+Layout-Breaker
+===
+Click more times to get more and more text
+
+Goal
+==
+
+Layout-Breaker
+===
+To see how page layout reacts to varying sizes in text content in order to assess robustness of markup & styles.
+
+Jibberishifier
+===
+To see if after removing meaning from the text the visual cues in the page styling are still effective to convey context & direct focus.
 
 Known Issues
 ==
 - Firefox has an (open bug)[https://bugzilla.mozilla.org/show_bug.cgi?id=866522] that prevents bookmarklets to run on sites with CSP enabled. Just copy the (raw contents)[https://raw.githubusercontent.com/caligin/layout-breaker/master/layout-breaker.js] of `layout.breaker.js` and paste in the js console.
+
+Roadmap?
+==
+- merge as one bookmarket? First click scrambles, second onwards scramble + increase size. (is it even possible? is it useful? is it good UX?)
+- be able to jibberishify non-ascii characters? (Right-to-left languages, ideogram-based languages, other...?)
+
+Acknowledgements
+==
+- Thanks to everyone on (this reddit thread)[https://www.reddit.com/r/javascript/comments/3hbkl9/usability_dont_make_me_think_and_a_bookmarklet/] to inspire me to write this & help refine the ideas.
+- Thanks (James)[https://github.com/hellojames] for explaining to me the value of this kind of tests.
